--- a/mdb.ipynb
+++ b/mdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e3868d7d",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Volumes/NGS/conda/miniconda3/envs/mystat/bin/python\n"
+      "/opt/miniconda3/envs/bioinfo/bin/python\n"
      ]
     }
    ],
@@ -21,45 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c4cbafa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collection(Database(MongoClient(host=['ac-wjm3rrn-shard-00-01.lrjskyv.mongodb.net:27017', 'ac-wjm3rrn-shard-00-00.lrjskyv.mongodb.net:27017', 'ac-wjm3rrn-shard-00-02.lrjskyv.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, authsource='admin', replicaset='atlas-10hgnz-shard-0', tls=True), 'paperref_manager'), 'paper')\n",
-      "\n",
-      " PaperRef_manager | choose an option\n",
-      "1. List all Paper references \n",
-      "2. Add Paper references \n",
-      "3. Update Paper references details \n",
-      "4. Delete Paper references \n",
-      "5. Exit the app \n",
-      "\n",
-      " PaperRef_manager | choose an option\n",
-      "1. List all Paper references \n",
-      "2. Add Paper references \n",
-      "3. Update Paper references details \n",
-      "4. Delete Paper references \n",
-      "5. Exit the app \n",
-      "\n",
-      "\n",
-      "************************************************************\n",
-      "ID: 684401f8dade50c11b6443fc, Name: Canonical Wnt signaling promotes HSC glycolysis and liver fibrosis and author: Feixia Wang in 2024\n",
-      "ID: 6844026a52a4ad5ae6b50f78, Name: Wnt/β-Catenin Signaling in Liver Development, Homeostasis, and Pathobiology and author: Jacquelyn O Russell in 2018\n",
-      "ID: 6844a1be3a2f8c26c88625d1, Name: The role of liver cancer stem cells in hepatocellular carcinoma metastasis and author: Qinghui Niu in 2024\n",
-      "\n",
-      "\n",
-      "************************************************************\n",
-      "\n",
-      " PaperRef_manager | choose an option\n",
-      "1. List all Paper references \n",
-      "2. Add Paper references \n",
-      "3. Update Paper references details \n",
-      "4. Delete Paper references \n",
-      "5. Exit the app \n"
+     "ename": "SyntaxError",
+     "evalue": "f-string: unmatched '[' (3126011019.py, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(f\"ID: { paper[\"_id\"]}, Name: {paper[\"name\"]} and author: {paper[\"author\"]} in {paper[\"year\"]}\")\u001b[39m\n                         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: unmatched '['\n"
      ]
     }
    ],
@@ -87,7 +58,7 @@
     "    print(\"\\n\")\n",
     "    print(\"*\" * 60)\n",
     "    for paper in paper_collection.find():\n",
-    "        print(f\"ID: { paper[\"_id\"]}, Name: {paper[\"name\"]} and author: {paper[\"author\"]} in {paper[\"year\"]}\")\n",
+    "        print(f\"ID: { paper['_id']}, Name: {paper['name']} and author: {paper['author']} in {paper['year']}\")\n",
     "    print(\"\\n\")\n",
     "    print(\"*\" * 60)\n",
     "def update_paper(paper_id, new_name, new_author, new_year):\n",
@@ -140,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mystat",
+   "display_name": "bioinfo",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
