--- a/mdb.ipynb
+++ b/mdb.ipynb
@@ -21,16 +21,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2c4cbafa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: unmatched '[' (3126011019.py, line 24)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(f\"ID: { paper[\"_id\"]}, Name: {paper[\"name\"]} and author: {paper[\"author\"]} in {paper[\"year\"]}\")\u001b[39m\n                         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: unmatched '['\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collection(Database(MongoClient(host=['ac-wjm3rrn-shard-00-00.lrjskyv.mongodb.net:27017', 'ac-wjm3rrn-shard-00-02.lrjskyv.mongodb.net:27017', 'ac-wjm3rrn-shard-00-01.lrjskyv.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, authsource='admin', replicaset='atlas-10hgnz-shard-0', tls=True), 'paperref_manager'), 'paper')\n",
+      "\n",
+      " PaperRef_manager | choose an option\n",
+      "1. List all Paper references \n",
+      "2. Add Paper references \n",
+      "3. Update Paper references details \n",
+      "4. Delete Paper references \n",
+      "5. Exit the app \n",
+      "\n",
+      "\n",
+      "************************************************************\n",
+      "ID: 684401f8dade50c11b6443fc, Name: Canonical Wnt signaling promotes HSC glycolysis and liver fibrosis and author: Feixia Wang in 2024\n",
+      "ID: 6844026a52a4ad5ae6b50f78, Name: Wnt/β-Catenin Signaling in Liver Development, Homeostasis, and Pathobiology and author: Jacquelyn O Russell in 2018\n",
+      "ID: 6844a1be3a2f8c26c88625d1, Name: The role of liver cancer stem cells in hepatocellular carcinoma metastasis and author: Qinghui Niu in 2024\n",
+      "ID: 6855cd76a5774543678c218f, Name: dentification of Characteristic Genomic Markers in Human Hepatoma HuH-7  and author: Masaki Kawamoto in 2020\n",
+      "ID: 685f91b42301e4d4ae96cc4d, Name: Understanding the cellular interactome of non-alcoholic fatty liver disease and author: Sebastian J Wallace in 2022\n",
+      "\n",
+      "\n",
+      "************************************************************\n",
+      "\n",
+      " PaperRef_manager | choose an option\n",
+      "1. List all Paper references \n",
+      "2. Add Paper references \n",
+      "3. Update Paper references details \n",
+      "4. Delete Paper references \n",
+      "5. Exit the app \n"
      ]
     }
    ],
