--- a/mdb.ipynb
+++ b/mdb.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2c4cbafa",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "from pymongo import MongoClient\n",
+    "from pymongo import MongoClient #nolint\n",
     "from bson import ObjectId\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
